--- a/3/index.html
+++ b/3/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mysterious Vacation</title>
-  <link rel="stylesheet" href="css/style.min.css">
+  <!-- <link rel="stylesheet" href="css/style.min.css"> -->
 <link href="css/style.min.css" rel="stylesheet">  <base href="https://htmlacademy-animation.github.io/811447-magic-vacation-1/3/">
 </head>
 <body>
@@ -460,6 +460,7 @@
         </div>
       </div>
     </section>
+    <div class="screen--bg"></div>
   </main>
 
 <script src="js/script.js"></script></body>
