--- a/source/index.html
+++ b/source/index.html
@@ -495,7 +495,7 @@
         </div>
       </div>
     </section>
-    <div class="screen--bg"></div>
+    <div class="background"></div>
   </main>
 
 </body>
