--- a/source/index.html
+++ b/source/index.html
@@ -353,7 +353,7 @@
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 568.85 109.24">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 568.85 109.24" class="svg-animation">
               <path d="M16,24.44V92H2.6V8H75V92H61.52V24.44H16Z" transform="translate(-2.1 -1.5)" fill="none" stroke="currentColor">
                 <animate
                   class="dasharray-animation"
@@ -389,7 +389,7 @@
                   attributeName="stroke-dasharray"
                   dur="1s"
                   fill="freeze"
-                />   
+                />
               </path>
               <path
                 d="M382.39,110.24V75.56h7.44c4.56-4.68,7.8-18.36,8.76-56L399,8h48.6V75.56h10v34.68H442.87V92H397v18.24H382.39Zm51.72-34.68V24.44H411.55v3.12c-0.48,22.44-3.24,37.68-7.2,48h29.76Z"
@@ -454,7 +454,7 @@
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 568.85 109.24">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 568.85 109.24" class="svg-animation">
               <path d="M16,24.44V92H2.6V8H75V92H61.52V24.44H16Z" transform="translate(-2.1 -1.5)" fill="none" stroke="currentColor">
                 <animate
                   class="dasharray-animation"
@@ -554,9 +554,9 @@
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">Не угадал!</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 660.77 109.24">
-              <path d="M2.66,92V8H16.1V42.2H53.3V8H66.74V92H53.3V58.64H16.1V92H2.66Z" transform="translate(-2.16 -50)"
-                    fill="none" stroke="currentColor">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 660.77 109.24" class="svg-animation">
+              <path d="M2.66,92V8H16.1V42.2H53.3V8H66.74V92H53.3V58.64H16.1V92H2.66Z" transform="translate(-2.16 -70)"
+                    fill="none" stroke="currentColor" stroke-dasharray="0 1000">
                 <animate
                   class="dasharray-animation"
                   attributeName="stroke-dasharray"
@@ -566,25 +566,15 @@
                 <animateTransform
                   attributeName="transform"
                   type="translate"
-                  values="-2.16 -50; -2.16 -1.15"
-                  dur="1.5s"
+                  values="-2.16 -70; -2.16 -1.15; -2.16 -15; -2.16 -1.15"
+                  keyTimes="0; 0.6; 0.8; 1"
+                  dur="1s"
                   additive="replace"
                   fill="freeze"
-                  begin="0.5s"
                 />
               </path>
-              <path d="M147.62,8V24.44H97V41.6h33.6V58H97V75.56h50.64V92H83.54V8h64.08Z" transform="translate(-2.16 -1.5)"
-                    fill="none" stroke="currentColor">
-                <animate
-                  class="dasharray-animation"
-                  attributeName="stroke-dasharray"
-                  dur="1s"
-                  fill="freeze"
-                  begin="0.05s"
-                />
-              </path>
-              <path d="M199.22,8l20.52,42.36L235.34,8h16.44l-31,84H204.38l9.48-25.92L185.78,8h13.44Z"
-                    transform="translate(-2.16 -1.5)" fill="none" stroke="currentColor">
+              <path d="M147.62,8V24.44H97V41.6h33.6V58H97V75.56h50.64V92H83.54V8h64.08Z" transform="translate(-2.16 -70)"
+                    fill="none" stroke="currentColor" stroke-dasharray="0 1000">
                 <animate
                   class="dasharray-animation"
                   attributeName="stroke-dasharray"
@@ -592,20 +582,19 @@
                   fill="freeze"
                   begin="0.1s"
                 />
-              </path>
-              <path d="M273.74,24.44V92H260.3V8h50.16V24.44H273.74Z" transform="translate(-2.16 -1.5)" fill="none"
-                    stroke="currentColor">
-                <animate
-                  class="dasharray-animation"
-                  attributeName="stroke-dasharray"
+                <animateTransform
+                  attributeName="transform"
+                  type="translate"
+                  values="-2.16 -70; -2.16 -1.15; -2.16 -15; -2.16 -1.15"
+                  keyTimes="0; 0.6; 0.8; 1"
                   dur="1s"
+                  additive="replace"
                   fill="freeze"
-                  begin="0.15s"
+                  begin="0.1s"
                 />
               </path>
-              <path
-                d="M307.1,92l28-84h27.12l28.08,84H376.82L369,68.48h-37.8L323.42,92H307.1Zm56.64-40L350.3,11.84,336.86,52h26.88Z"
-                transform="translate(-2.16 -1.5)" fill="none" stroke="currentColor">
+              <path d="M199.22,8l20.52,42.36L235.34,8h16.44l-31,84H204.38l9.48-25.92L185.78,8h13.44Z"
+                    transform="translate(-2.16 -70)" fill="none" stroke="currentColor" stroke-dasharray="0 1000">
                 <animate
                   class="dasharray-animation"
                   attributeName="stroke-dasharray"
@@ -613,21 +602,19 @@
                   fill="freeze"
                   begin="0.2s"
                 />
-              </path>
-              <path
-                d="M396.38,110.24V75.56h7.44c4.56-4.68,7.8-18.36,8.76-56L412.94,8h48.6V75.56h10v34.68H456.86V92H411v18.24H396.38ZM448.1,75.56V24.44H425.54v3.12c-0.48,22.44-3.24,37.68-7.2,48H448.1Z"
-                transform="translate(-2.16 -1.5)" fill="none" stroke="currentColor">
-                <animate
-                  class="dasharray-animation"
-                  attributeName="stroke-dasharray"
+                <animateTransform
+                  attributeName="transform"
+                  type="translate"
+                  values="-2.16 -70; -2.16 -1.15; -2.16 -15; -2.16 -1.15"
+                  keyTimes="0; 0.6; 0.8; 1"
                   dur="1s"
+                  additive="replace"
                   fill="freeze"
-                  begin="0.25s"
+                  begin="0.2s"
                 />
               </path>
-              <path
-                d="M477.74,92l28-84h27.12L560.9,92H547.46l-7.8-23.52h-37.8L494.06,92H477.74Zm56.64-40-13.44-40.2L507.5,52h26.88Z"
-                transform="translate(-2.16 -1.5)" fill="none" stroke="currentColor">
+              <path d="M273.74,24.44V92H260.3V8h50.16V24.44H273.74Z" transform="translate(-2.16 -70)" fill="none"
+                    stroke="currentColor" stroke-dasharray="0 1000">
                 <animate
                   class="dasharray-animation"
                   attributeName="stroke-dasharray"
@@ -635,27 +622,120 @@
                   fill="freeze"
                   begin="0.3s"
                 />
-              </path>
-              <path
-                d="M568.7,76.88a13.77,13.77,0,0,0,5,1c6.6,0,10.44-6.24,12-58.32L586.22,8h46.2V92H619V24.44H598.82l-0.12,3.12C597.14,81,589,94.4,573.74,94.4a28.55,28.55,0,0,1-6.72-.84Z"
-                transform="translate(-2.16 -1.5)" fill="none" stroke="currentColor">
-                <animate
-                  class="dasharray-animation"
-                  attributeName="stroke-dasharray"
+                <animateTransform
+                  attributeName="transform"
+                  type="translate"
+                  values="-2.16 -70; -2.16 -1.15; -2.16 -15; -2.16 -1.15"
+                  keyTimes="0; 0.6; 0.8; 1"
                   dur="1s"
+                  additive="replace"
                   fill="freeze"
-                  begin="0.35s"
+                  begin="0.3s"
                 />
               </path>
               <path
-                d="M646.1,70.4L647.54,2H661l1.44,68.4H646.1Zm8.28,6.36c4.8,0,8,3.24,8,8.16a8,8,0,0,1-16.08,0C646.34,80,649.58,76.76,654.38,76.76Z"
-                transform="translate(-2.16 -1.5)" fill="none" stroke="currentColor">
+                d="M307.1,92l28-84h27.12l28.08,84H376.82L369,68.48h-37.8L323.42,92H307.1Zm56.64-40L350.3,11.84,336.86,52h26.88Z"
+                transform="translate(-2.16 -70)" fill="none" stroke="currentColor" stroke-dasharray="0 1000">
                 <animate
                   class="dasharray-animation"
                   attributeName="stroke-dasharray"
                   dur="1s"
                   fill="freeze"
                   begin="0.4s"
+                />
+                <animateTransform
+                  attributeName="transform"
+                  type="translate"
+                  values="-2.16 -70; -2.16 -1.15; -2.16 -15; -2.16 -1.15"
+                  keyTimes="0; 0.6; 0.8; 1"
+                  dur="1s"
+                  additive="replace"
+                  fill="freeze"
+                  begin="0.4s"
+                />
+              </path>
+              <path
+                d="M396.38,110.24V75.56h7.44c4.56-4.68,7.8-18.36,8.76-56L412.94,8h48.6V75.56h10v34.68H456.86V92H411v18.24H396.38ZM448.1,75.56V24.44H425.54v3.12c-0.48,22.44-3.24,37.68-7.2,48H448.1Z"
+                transform="translate(-2.16 -70)" fill="none" stroke="currentColor" stroke-dasharray="0 1000">
+                <animate
+                  class="dasharray-animation"
+                  attributeName="stroke-dasharray"
+                  dur="1s"
+                  fill="freeze"
+                  begin="0.5s"
+                />
+                <animateTransform
+                  attributeName="transform"
+                  type="translate"
+                  values="-2.16 -70; -2.16 -1.15; -2.16 -15; -2.16 -1.15"
+                  keyTimes="0; 0.6; 0.8; 1"
+                  dur="1s"
+                  additive="replace"
+                  fill="freeze"
+                  begin="0.5s"
+                />
+              </path>
+              <path
+                d="M477.74,92l28-84h27.12L560.9,92H547.46l-7.8-23.52h-37.8L494.06,92H477.74Zm56.64-40-13.44-40.2L507.5,52h26.88Z"
+                transform="translate(-2.16 -70)" fill="none" stroke="currentColor" stroke-dasharray="0 1000">
+                <animate
+                  class="dasharray-animation"
+                  attributeName="stroke-dasharray"
+                  dur="1s"
+                  fill="freeze"
+                  begin="0.6s"
+                />
+                <animateTransform
+                  attributeName="transform"
+                  type="translate"
+                  values="-2.16 -70; -2.16 -1.15; -2.16 -15; -2.16 -1.15"
+                  keyTimes="0; 0.6; 0.8; 1"
+                  dur="1s"
+                  additive="replace"
+                  fill="freeze"
+                  begin="0.6s"
+                />
+              </path>
+              <path
+                d="M568.7,76.88a13.77,13.77,0,0,0,5,1c6.6,0,10.44-6.24,12-58.32L586.22,8h46.2V92H619V24.44H598.82l-0.12,3.12C597.14,81,589,94.4,573.74,94.4a28.55,28.55,0,0,1-6.72-.84Z"
+                transform="translate(-2.16 -70)" fill="none" stroke="currentColor" stroke-dasharray="0 1000">
+                <animate
+                  class="dasharray-animation"
+                  attributeName="stroke-dasharray"
+                  dur="1s"
+                  fill="freeze"
+                  begin="0.7s"
+                />
+                <animateTransform
+                  attributeName="transform"
+                  type="translate"
+                  values="-2.16 -70; -2.16 -1.15; -2.16 -15; -2.16 -1.15"
+                  keyTimes="0; 0.6; 0.8; 1"
+                  dur="1s"
+                  additive="replace"
+                  fill="freeze"
+                  begin="0.7s"
+                />
+              </path>
+              <path
+                d="M646.1,70.4L647.54,2H661l1.44,68.4H646.1Zm8.28,6.36c4.8,0,8,3.24,8,8.16a8,8,0,0,1-16.08,0C646.34,80,649.58,76.76,654.38,76.76Z"
+                transform="translate(-2.16 -70)" fill="none" stroke="currentColor" stroke-dasharray="0 1000">
+                <animate
+                  class="dasharray-animation"
+                  attributeName="stroke-dasharray"
+                  dur="1s"
+                  fill="freeze"
+                  begin="0.8s"
+                />
+                <animateTransform
+                  attributeName="transform"
+                  type="translate"
+                  values="-2.16 -70; -2.16 -1.15; -2.16 -15; -2.16 -1.15"
+                  keyTimes="0; 0.6; 0.8; 1"
+                  dur="1s"
+                  additive="replace"
+                  fill="freeze"
+                  begin="0.8s"
                 />
               </path>
             </svg>
