--- a/source/index.html
+++ b/source/index.html
@@ -346,10 +346,17 @@
       <div class="screen__wrapper">
         <div class="result result--trip">
           <div class="result__image">
-            <picture>
+            <!-- <picture>
               <source srcset="img/result1-mob.png 1x, img/result1-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
               <img src="img/result1.png" srcset="img/result1@2x.png 2x" alt="">
-            </picture>
+            </picture> -->
+            <canvas class="result__canvas" id="back"></canvas>
+            <canvas class="result__canvas" id="ice"></canvas>
+            <canvas class="result__canvas" id="see-calf"></canvas>
+            <canvas class="result__canvas" id="snowflake"></canvas>
+            <canvas class="result__canvas" id="tree"></canvas>
+            <canvas class="result__canvas" id="tree2"></canvas>
+            <canvas class="result__canvas" id="airplane"></canvas>
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
