--- a/source/index.html
+++ b/source/index.html
@@ -350,12 +350,7 @@
               <source srcset="img/result1-mob.png 1x, img/result1-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
               <img src="img/result1.png" srcset="img/result1@2x.png 2x" alt="">
             </picture> -->
-            <canvas class="result__canvas" id="back"></canvas>
-            <canvas class="result__canvas" id="ice"></canvas>
-            <canvas class="result__canvas" id="see-calf"></canvas>
-            <canvas class="result__canvas" id="snowflake"></canvas>
-            <canvas class="result__canvas" id="tree"></canvas>
-            <canvas class="result__canvas" id="tree2"></canvas>
+            <canvas class="result__canvas" id="sea-calf"></canvas>
             <canvas class="result__canvas" id="airplane"></canvas>
           </div>
           <h2 class="result__title">
